wal-macros/tests/html_macro_tests/attributes/event_attributes_fail.stderr
error: expected `=`
 --> tests/html_macro_tests/attributes/event_attributes_fail.rs:5:25
  |
5 |     html! { <div onclick></div> };
  |                         ^

error: Expected a literal or an expression block
 --> tests/html_macro_tests/attributes/event_attributes_fail.rs:6:26
  |
6 |     html! { <div onclick=></div> };
  |                          ^

error: expected `=`
 --> tests/html_macro_tests/attributes/event_attributes_fail.rs:7:26
  |
7 |     html! { <div onclick {Callback::new(|_event: web_sys::MouseEvent)| {}}></div> };
  |                          ^

error: Duplicate event attribute `onclick`
  --> tests/html_macro_tests/attributes/event_attributes_fail.rs:11:13
   |
11 |             onclick={Callback::new(|_event: web_sys::MouseEvent| {})}>
   |             ^^^^^^^

error: Expected a literal or an expression block
  --> tests/html_macro_tests/attributes/event_attributes_fail.rs:14:27
   |
14 |     html! { <div onclick= ondblclick={Callback::new(|_event: web_sys::MouseEvent| {})}></div> };
   |                           ^^^^^^^^^^

error: Expected an expression block for event attribute `onclick`
  --> tests/html_macro_tests/attributes/event_attributes_fail.rs:17:18
   |
17 |     html! { <div onclick="value"></div> };
   |                  ^^^^^^^

error: Expected a non-empty expression block
  --> tests/html_macro_tests/attributes/event_attributes_fail.rs:18:26
   |
18 |     html! { <div onclick={}></div> };
   |                          ^^

error[E0308]: mismatched types
  --> tests/html_macro_tests/attributes/event_attributes_fail.rs:15:27
   |
15 |     html! { <div onclick={Callback::new(|_event: web_sys::Event| {})}></div> };
   |                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `Callback<MouseEvent>`, found `Callback<Event>`
   |
   = note: expected struct `Callback<MouseEvent>`
              found struct `Callback<Event>`

error[E0308]: mismatched types
  --> tests/html_macro_tests/attributes/event_attributes_fail.rs:16:27
   |
16 |     html! { <div onclick={Callback::new(|_event: web_sys::DragEvent| {})}></div> };
   |                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `Callback<MouseEvent>`, found `Callback<DragEvent>`
   |
   = note: expected struct `Callback<MouseEvent>`
              found struct `Callback<DragEvent>`

error[E0308]: mismatched types
  --> tests/html_macro_tests/attributes/event_attributes_fail.rs:19:27
   |
19 |     html! { <div onclick={"value"}></div> };
   |                           ^^^^^^^ expected `Callback<MouseEvent>`, found `&str`
   |
   = note: expected struct `Callback<MouseEvent>`
           found reference `&'static str`
